--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Add your site or application content here -->
         <header>
             <ul>
-                <li><h2>My Shop</h2></li>
+                <li><a href="/"><h2>My Shop</h2></a></li>
                 <li id="toggler" class="pointer">
                     <img src="img/cart.png"><span class="amount bg-light" style="display: none">0</span>
                 </li>
@@ -53,7 +53,12 @@
             <div id="overlay" class="pointer"></div>
         </section>
 
-        <section>
+        <section class="main">
+
+        </section>
+        
+        <!-- template for main page (catalog) -->
+        <template id="page-main">
             <div class="container" style="max-width: 1080px;">
                 <div id="catalog" class="row">
                     <div id="spinner" class="spinner" style="border-top-color: lightskyblue"></div>
@@ -68,7 +73,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </template>
+
+        <template id="page-checkout">
+            <h1 style="text-align: center">Checkout</h1>
+        </template>
 
         <!-- template for catalog product-->
         <template id="product">
