--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Add your site or application content here -->
         <header>
             <ul>
-                <li><a href="/"><h2>My Shop</h2></a></li>
+                <li><a href="."><h2>My Shop</h2></a></li>
                 <li id="toggler" class="pointer">
                     <img src="img/cart.png"><span class="amount bg-light" style="display: none">0</span>
                 </li>
