part catalog, cart

--- a/babel-index.html
+++ b/babel-index.html
@@ -91,8 +91,8 @@
                     <h5>Price: <span class="price">${price}$</span></h5>
                     <div class="row">
                         <button class="bg-primary">Add To Cart</button>
-                        <input class="amount" type="number" value="1"
-                            name="amount">
+                        <input class="amount" type="number" name="amount"
+                            value="1" min="1">
                     </div>
                 </div>
             </div>
