--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <ul>
                 <li><a href="."><h2>My Shop</h2></a></li>
                 <li id="toggler" class="pointer">
-                    <img src="img/cart.png"><span class="amount bg-light" style="display: none">0</span>
+                    <img class="cart" src="img/cart.png">
+                    <span class="amount bg-light" style="display: none">0</span>
+                    <div class="spinner" style="border-top-color: lightskyblue"></div>
                 </li>
             </ul>
         </header>
@@ -61,7 +63,7 @@
         <template id="page-main">
             <div class="container" style="max-width: 1080px;">
                 <div id="catalog" class="row">
-                    <div id="spinner" class="spinner" style="border-top-color: lightskyblue"></div>
+                    <div class="spinner" style="border-top-color: lightskyblue"></div>
                 </div>
 
                 <div id="pagination" class="pagination" style="display: none">
