Add terminal, start using namespaces

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/mobile.css">
+        <link rel="stylesheet" href="css/terminal.css">
         <meta name="theme-color" content="#fafafa">
     </head>
 
@@ -58,7 +59,13 @@
         <section class="main">
 
         </section>
-        
+
+        <div id="terminal">
+            <div class="buttons">
+                    <button class="resize">︽</button>
+                    <button class="close" title="Close terminal">X</button>
+            </div>
+        </div>
         <!-- template for main page (catalog) -->
         <template id="page-main">
             <div class="container" style="max-width: 1080px;">
