--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <title>MyShop</title>
@@ -22,7 +23,9 @@
         <!-- Add your site or application content here -->
         <header>
             <ul>
-                <li><a href="."><h2>My Shop</h2></a></li>
+                <li><a href=".">
+                        <h2>My Shop</h2>
+                    </a></li>
                 <li id="toggler" class="pointer">
                     <img class="cart" src="img/cart.png">
                     <span class="amount bg-light" style="display: none">0</span>
@@ -62,8 +65,8 @@
 
         <div id="terminal">
             <div class="buttons">
-                    <button class="resize">︽</button>
-                    <button class="close" title="Close terminal">X</button>
+                <button class="resize">︽</button>
+                <button class="close" title="Close terminal">X</button>
             </div>
         </div>
         <!-- template for main page (catalog) -->
@@ -98,7 +101,8 @@
                     <h5>Price: <span class="price">${price}$</span></h5>
                     <div class="row">
                         <button class="bg-primary">Add To Cart</button>
-                        <input class="amount" type="number" name="amount" value="1" min="1">
+                        <input class="amount" type="number" name="amount"
+                            value="1" min="1">
                     </div>
                 </div>
             </div>
@@ -121,7 +125,6 @@
         </template>
 
         <script src="js/vendor/jquery-3.4.1.min.js"></script>
-        <!-- this is file is es6 -->
         <script type="module" src="js/app.js"></script>
     </body>
 </html>
