--- a/babel-index.html
+++ b/babel-index.html
@@ -23,7 +23,7 @@
         <header>
             <ul>
                 <li>
-                    <a href="."><h2>My Shop</h2></a>
+                    <a href="#" id="logo"><h2>My Shop</h2></a>
                 </li>
 
                 <li id="toggler" class="pointer">
