--- a/frontend/old-index.html
+++ b/frontend/old-index.html
@@ -5,7 +5,7 @@
         <title>MyShop</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img/icon.png" sizes="192x192" />
+        <link rel="icon" href="../img/icon.png" sizes="192x192" />
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/main.css">
@@ -27,7 +27,7 @@
                 </li>
 
                 <li id="toggler" class="pointer">
-                    <img class="cart" src="img/cart.png">
+                    <img class="cart" src="../img/cart.png">
                     <span class="amount bg-light" style="display: none">0</span>
                     <div class="spinner" style="border-top-color: lightskyblue"></div>
                 </li>
