WIP: Draft - Minimal comparability.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
                 </li>
 
                 <li id="toggler" class="pointer">
-                    <img class="cart" src="../img/cart.png">
+                    <img class="cart" src="img/cart.png">
                     <span class="amount bg-light" style="display: none">0</span>
                     <div class="spinner" style="border-top-color: lightskyblue"></div>
                 </li>
@@ -58,6 +58,6 @@
         </div>
 
         <script src="vendor/jquery-3.4.1.min.js"></script>
-        <script src="app.bundle.js"></script>
+        <script src="dist/app.bundle.js"></script>
     </body>
 </html>
