WIP: Draft - Upgrade.

--- a/frontend/old-index.html
+++ b/frontend/old-index.html
@@ -26,7 +26,7 @@
                     <a href="#" id="logo"><h2>My Shop</h2></a>
                 </li>
 
-                <li id="toggler" class="pointer">
+                <li id="toggle" class="pointer">
                     <img class="cart" src="../img/cart.png">
                     <span class="amount bg-light" style="display: none">0</span>
                     <div class="spinner" style="border-top-color: lightskyblue"></div>
