WIP: Dev/MVC: New - Complex.

--- a/dev/mvc/index.html
+++ b/dev/mvc/index.html
@@ -11,8 +11,8 @@
                 height: 500px;
                 border: 1px solid black;
                 padding: 20px;
-                margin: 20px;     
-                background: yellow;       
+                margin: 20px;
+                background: yellow;
             }
         </style>
     </head>
@@ -21,6 +21,6 @@
         <div id="root">
         Root
         </div>
-        <script type="module" src="index.js"></script>
+        <script  src="../../frontend/dist/mvc.bundle.js"></script>
     </body>
 </html>
