WIP: Frontend: Change - Use Element instead Jquery.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,8 +27,8 @@
                 </li>
 
                 <li id="toggle" class="pointer">
-                    <img class="cart" src="img/cart.png">
-                    <span class="amount bg-light" style="display: none">0</span>
+                    <img class="cart hidden" src="img/cart.png">
+                    <span class="amount hidden bg-light">0</span>
                     <div class="spinner" style="border-top-color: lightskyblue"></div>
                 </li>
             </ul>
