Frontend: Fix - CSS path's are wrong, use <base> tag to fix it.
assuming running php -S localhost.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
         <title>MyShop</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <base href="/frontend/">
         <link rel="icon" href="../img/icon.png" sizes="192x192" />
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/fonts.css">
